make the first project responsive

--- a/First-project/index.html
+++ b/First-project/index.html
@@ -35,9 +35,12 @@
                     </div>
                     <div class="rightItems">
                     <h3>Product Deatails</h3>
+                    <i class="ri-arrow-right-up-line"></i>
+
                     </div>
                     <div class="rightItems">
                     <h3>Shipping</h3>
+                    <i class="ri-arrow-right-up-line"></i>
                     </div>
                 </div>
             </div>
